# mp-hosts

./: Cargo.toml  README.md
hosts_parser/: Cargo.toml
hosts_parser/src/: lib.rs
src/: main.rs
