[package]
name = "mp-hosts"
version = "0.1.0"
authors = ["gatewaynode <44749714+gatewaynode@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    hosts_parser
]

[dependencies]
hostfile = "0.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
